cluster/elastic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kibana
    namespace: elastic
    annotations:
        nginx.ingress.kubernetes.io/backend-protocol: HTTPS
        nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
        nginx.ingress.kubernetes.io/configuration-snippet: ENC[AES256_GCM,data:1si+9uCLPGty6f527k3MH/30idn4W23pWV6z1e7cy8KRy9DKvTZD7DeV0f4XH/SQw0clMvHMflcFERkQs7404Zw1o58biCMOFgA60umCWw3n8ecfSBOD,iv:sOjThT/ncz2iIhY9iCu/m3A2K4Zpg3HbPnL0YUIB4aA=,tag:pY5qXwIOQDMDAW1P/He30Q==,type:str]
spec:
    rules:
        - host: kb.sko.ai
          http:
            paths:
                - backend:
                    service:
                        name: main-kb-http
                        port:
                            number: 5601
                  path: /
                  pathType: Prefix
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-02-20T15:15:04Z"
    mac: ENC[AES256_GCM,data:1r04CnaQVVNYhh8IaMAemwXD04uhsJmMZnMwzk8oeRVGDuwcwkPya4TRoioCHL0h0CbhlDs8kHZLa9utvdjZGhk2xq8FpmZ3juERyCQ6Xw2Pjpt8v0r0vdNtYySNazWda2aZwfB/ysm0AnHVhYjuv3IblGtGQro/5XDibPX6OX8=,iv:5qSzn5xnlhslW8RIntw6rHN2xNdeijec18ovf+uNE94=,tag:5YiCcbu6BQ5K+pfH7XhpzA==,type:str]
    pgp:
        - created_at: "2023-02-20T15:15:04Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQMOA4x50yY5upzjEAv/Ydmvx73EzUKyeKEU9Wjor9Bwnzpqt26F0bfqFXaJQbMU
[...]
            HpsBTvjxZ7MhraVMBR6l
            =0xqi
            -----END PGP MESSAGE-----
          fp: E940DD1F01DE41AC266825F72E962083AFA12A4D
    encrypted_regex: config
    version: 3.7.3
